# linear_sequence

./: CMakeLists.txt  Dockerfile  README.md  build.sh  build_and_run_.sh  docker_run.sh  linear_sequence.c
docker/: Dockerfile  entry.sh
lib/: CMakeLists.txt  linear_sequence.c  linear_sequence.h
src/: base_tests.cpp  iterator_tests.cpp  main.cpp  stress_tests.cpp
